@@ -57,11 +57,11 @@ macro S_ISFIFO
 macro S_ISREG
 macro S_ISLNK
 
-# How to represent optional tests?
-# macro S_TYPEISMQ
-# macro S_TYPEISSEM
-# macro S_TYPEISSHM
-# macro S_TYPEISTMO
+// How to represent optional tests?
+// macro S_TYPEISMQ
+// macro S_TYPEISSEM
+// macro S_TYPEISSHM
+// macro S_TYPEISTMO
 
 function int chmod (const char*, mode_t)
 function int fchmod (int, mode_t)
